# airdcpp-webclient

./: .gitattributes  .gitignore  .travis.yml  .ycm_extra_conf.py  ADLSearch.cpp  ADLSearch.h  AdcCommand.cpp  AdcCommand.h  AdcHub.cpp  AdcHub.h  AdcSearch.cpp  AdcSearch.h  AirUtil.cpp  AirUtil.h  AutoSearch.cpp  AutoSearch.h  AutoSearchManager.cpp  AutoSearchManager.h  AutoSearchManagerListener.h  AutosearchManagerListener.h  BZUtils.cpp  BZUtils.h  BerkeleyDB.h  BitInputStream.h  BitOutputStream.h  BloomFilter.h  BufferedSocket.cpp  BufferedSocket.h  BufferedSocketListener.h  Bundle.cpp  Bundle.h  BundleQueue.cpp  BundleQueue.h  CID.cpp  CID.h  CMakeLists.txt  ChatMessage.cpp  ChatMessage.h  Client.cpp  Client.h  (+280 more)
airdcpp-core/: .gitignore  CMakeLists.txt  README.md  airdcpp.vcxproj  airdcpp.vcxproj.filters
airdcpp-core/airdcpp/: ADLSearch.cpp  ADLSearch.h  ActionHook.h  ActivityManager.cpp  ActivityManager.h  AdcCommand.cpp  AdcCommand.h  AdcHub.cpp  AdcHub.h  AdcSupports.h  AddressInfo.h  AirUtil.cpp  AirUtil.h  AppUtil.cpp  AppUtil.h  AutoLimitUtil.h  AutoSearch.cpp  AutoSearch.h  AutoSearchManager.cpp  AutoSearchManager.h  AutoSearchManagerListener.h  AutoSearchQueue.h  BZUtils.cpp  BZUtils.h  BloomFilter.h  BufferedSocket.cpp  BufferedSocket.h  BufferedSocketListener.h  Bundle.cpp  Bundle.h  BundleInfo.h  BundleQueue.cpp  BundleQueue.h  CID.cpp  CID.h  Client.cpp  Client.h  ClientListener.h  ClientManager.cpp  ClientManager.h  (+353 more)
airdcpp-core/airdcpp/connection/: ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerListener.h  ThrottleManager.cpp  ThrottleManager.h  UDPServer.h  UserConnection.cpp  UserConnection.h  UserConnectionListener.h
airdcpp-core/airdcpp/connectivity/: ConnectivityManager.cpp  ConnectivityManager.h  ConnectivityManagerListener.h  MappingManager.h
airdcpp-core/airdcpp/core/: ActionHook.h  Speaker.h  version.cpp
airdcpp-core/airdcpp/favorites/: FavoriteManager.cpp  FavoriteManager.h  FavoriteUserManager.cpp  FavoriteUserManager.h  HubEntry.cpp  HubEntry.h  ReservedSlotManager.cpp  ReservedSlotManager.h
airdcpp-core/airdcpp/filelist/: DirectoryDownload.h  DirectoryListingDirectory.cpp  DirectoryListingDirectory.h  DirectoryListingManager.h  ListLoader.cpp
airdcpp-core/airdcpp/hash/: HashManager.cpp  HashManager.h  HashManagerListener.h  HashStore.h  HashedFile.h  Hasher.cpp  Hasher.h  HasherManager.h  HasherStats.h
airdcpp-core/airdcpp/hub/: AdcHub.cpp  AdcHub.h  Client.cpp  Client.h  ClientListener.h  ClientManager.cpp  ClientManager.h  ClientManagerListener.h  HBRIValidation.h  NmdcHub.cpp  NmdcHub.h
airdcpp-core/airdcpp/message/: Message.cpp  Message.h  MessageCache.cpp  MessageCache.h  MessageHighlight.cpp  MessageHighlight.h
airdcpp-core/airdcpp/modules/: ADLSearch.cpp  ADLSearch.h  AutoSearch.cpp  AutoSearch.h  AutoSearchManager.cpp  AutoSearchManager.h  AutoSearchManagerListener.h  AutoSearchQueue.h  ColorSettings.cpp  ColorSettings.h  DirectSearch.cpp  DirectSearch.h  DirectoryListingSearch.cpp  DirectoryMonitor.cpp  DirectoryMonitor.h  DirectoryMonitorListener.h  FinishedManager.cpp  FinishedManager.h  FinishedManagerListener.h  HighlightManager.cpp  HighlightManager.h  HublistEntry.h  HublistManager.cpp  HublistManager.h  HublistManagerListener.h  PreviewAppManager.cpp  PreviewAppManager.h  RSSManager.cpp  RSSManager.h  ShareMonitorManager.cpp  ShareMonitorManager.h  ShareScannerManager.cpp  ShareScannerManager.h  TargetUtil.cpp  WebShortcuts.cpp  WebShortcuts.h
airdcpp-core/airdcpp/private_chat/: PrivateChat.cpp  PrivateChatManagerListener.h
airdcpp-core/airdcpp/protocol/: AdcCommand.h  AdcSupports.h
airdcpp-core/airdcpp/queue/: Bundle.cpp  BundleQueue.cpp  BundleQueue.h  FileQueue.cpp  FileQueue.h  QueueItem.cpp  QueueItemBase.cpp  QueueItemBase.h  QueueManager.cpp  QueueManager.h  UserQueue.h
airdcpp-core/airdcpp/recents/: RecentManager.h  RecentManagerListener.h
airdcpp-core/airdcpp/search/: GroupedSearchResult.cpp  GroupedSearchResult.h  RelevanceSearch.h  Search.h  SearchInstance.cpp  SearchInstance.h  SearchManager.cpp  SearchManager.h  SearchManagerListener.h  SearchQuery.cpp  SearchQuery.h  SearchQueue.cpp  SearchQueue.h  SearchTypes.h
airdcpp-core/scripts/: generate_stringdefs.py  generate_version.py  update_languages.py
airdcpp-webapi/: .gitignore  CMakeLists.txt  README.md  forward.h  json.h  stdinc.cpp  stdinc.h  webapi.vcxproj  webapi.vcxproj.filters
airdcpp-webapi/api/: AdcCommandApi.cpp  AdcCommandApi.h  ApiModule.cpp  ApiModule.h  ApiSettingItem.cpp  ApiSettingItem.h  ConnectivityApi.cpp  ConnectivityApi.h  CoreSettings.h  EventApi.cpp  EventApi.h  ExtensionApi.cpp  ExtensionApi.h  ExtensionInfo.cpp  ExtensionInfo.h  FavoriteDirectoryApi.cpp  FavoriteDirectoryApi.h  FavoriteHubApi.cpp  FavoriteHubApi.h  FavoriteHubUtils.cpp  FavoriteHubUtils.h  FilelistApi.cpp  FilelistApi.h  FilelistInfo.cpp  FilelistInfo.h  FilelistItemInfo.cpp  FilelistItemInfo.h  FilelistUtils.cpp  FilelistUtils.h  FilesystemApi.cpp  FilesystemApi.h  HashApi.cpp  HashApi.h  HierarchicalApiModule.h  HistoryApi.cpp  HistoryApi.h  HubApi.cpp  HubApi.h  HubInfo.cpp  HubInfo.h  (+56 more)
airdcpp-webapi/json/: json.hpp
airdcpp-webapi/microtar/: microtar.c  microtar.h
airdcpp-webapi/web-server/: Access.h  ApiRequest.cpp  ApiRequest.h  ApiRouter.cpp  ApiRouter.h  ApiSettingItem.cpp  ApiSettingItem.h  ContextMenuItem.h  ContextMenuManager.cpp  ContextMenuManager.h  ContextMenuManagerListener.h  Exception.h  Extension.cpp  Extension.h  ExtensionListener.h  ExtensionManager.cpp  ExtensionManager.h  ExtensionManagerListener.h  FileServer.cpp  FileServer.h  FloodCounter.cpp  FloodCounter.h  HttpManager.cpp  HttpManager.h  HttpRequest.h  HttpUtil.cpp  HttpUtil.h  JsonUtil.cpp  JsonUtil.h  LazyInitWrapper.h  NpmRepository.cpp  NpmRepository.h  Session.cpp  Session.h  SessionListener.h  SocketManager.cpp  SocketManager.h  SocketManagerListener.h  SystemUtil.cpp  SystemUtil.h  (+18 more)
airdcppd/: CDMDebug.cpp  CDMDebug.h  CMakeLists.txt  Client.cpp  Client.h  ConfigPrompt.cpp  ConfigPrompt.h  main.cpp  stacktrace.cpp  stacktrace.h  stdinc.h
(+1049 files in other folders)
